kubernetes/infrastructure/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: poseidon
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-lan-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.poseidon.lan"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-lan-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: barrelmaker.dev
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-public-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.barrelmaker.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-public-tls
      allowedRoutes:
        namespaces:
          from: All
