kubernetes/infrastructure/gateway/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: compression
  namespace: envoy-gateway-system
spec:
  compression:
    - type: Brotli
    - type: Gzip
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: poseidon
